// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview|Query.projects connection fetches the public and private projects with a cursor 1`] = `
Object {
  "projects": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
    "totalCount": 0,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects containing a specific term 1`] = `
Object {
  "projects": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
    "totalCount": 0,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects ordered by latest 1`] = `
Object {
  "projects": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
    "totalCount": 0,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a cursor 1`] = `
Object {
  "projects": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
    "totalCount": 0,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a specific theme 1`] = `
Object {
  "projects": Object {
    "edges": Array [],
    "totalCount": 0,
  },
}
`;

exports[`Preview|Query.projects connection fetches the public projects with a specific type 1`] = `
Object {
  "projects": Object {
    "edges": Array [],
    "totalCount": 0,
  },
}
`;
